samples/_failures_safe/1761328250_dd1888_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdfba45a.c: In function ‘main’:
./samples/SAFE/__tmp_fdfba45a.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("\nSecond matrix:\n");
      |     ^~~~~~
